# egcas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README  README.dev  README.md  build_package_win.bat  index.html  static_analysis.sh
cmake/: DeployQt.cmake
desktop/: egcas.desktop  postinst  prerm
doc/: manual.odt
examples/: default.egc
website/: stylesheet.css
win/: cmake_win.sh  set_env.sh  setup_mxe.sh
win/helper/: make_links.sh
